@@ -12,7 +12,8 @@ table.types th { border: 1px solid; padding: .1em .25em; }
 <BODY><H1>Supported Types</H1>
 <table class="types">
 <tr><th>Type</th><th>Size (w x h)</th><th>Contrast Support</th><th>Link(s)</th><th>Comment</th>
-<tr><td>abeyerr_black</td><td>128 x 128</td><td>In menu</td><td></td><td></td></tr><tr><td>acme_1</td><td>128 x 128</td><td>In menu</td><td></td><td>Unknown ebay seller
+<tr><td>abeyerr_black</td><td>128 x 128</td><td>In menu</td><td></td><td></td></tr><tr><td>abeyerr_black_2</td><td>128 x 128</td><td>No</td><td><a href="http://www.ebay.com/itm/280828187564">Link</a>
+</td><td></td></tr><tr><td>acme_1</td><td>128 x 128</td><td>In menu</td><td></td><td>Unknown ebay seller
 </td></tr><tr><td>acme_2</td><td>128 x 128</td><td>No</td><td></td><td>Unknown manufacturer
 </td></tr><tr><td>agk_violet</td><td>128 x 128</td><td>No</td><td></td><td></td></tr><tr><td>avlabs_avl969s</td><td>128 x 128</td><td>In menu</td><td><a href="http://www.avlabs.net">Link</a>
 </td><td></td></tr><tr><td>blue</td><td>128 x 128</td><td>No</td><td><a href="http://www.dealextreme.com/details.dx/sku.27894">Link</a>
